changedetection/changedetection-namespace.yml
# changedetection-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: changedetection
  labels:
    name: changedetection
