changedetection/changedetection-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: changedetection
  labels:
    app: changedetection
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: changedetection
