changedetection/changedetection-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
  namespace: changedetection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`changes.yourdomain.com`)
      kind: Rule
      services:
        - name: changedetection
          port: 80
  tls:
    certResolver: le
